<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 	android:stretchColumns="1"
  	android:collapseColumns="2"
  	android:shrinkColumns="1"
    tools:context=".AddGastoActivity" >

    <TableRow>
		<TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txtCategoria" />
	
	    <Spinner
	        android:id="@+id/spnCategorias"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
    </TableRow>
        
    <TableRow>
		<TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txtSubCategoria"/>

	    <Spinner
	        android:id="@+id/spnSubCategorias"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</TableRow>

	<TableRow>
		<TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txtMonto"/>

		<EditText
		    android:id="@+id/editMonto"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:digits="0123456789"
		    android:inputType="phone" >
		</EditText>
	</TableRow>

	<TableRow>
		<TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txtDescripcion"/>

		<EditText
		    android:id="@+id/editDescripcion"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10" >
		</EditText>
	</TableRow>
	
	<TableRow>
		<TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txtFecha"/>
		
		<TextView
	        android:id="@+id/txtFechaGasto"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingStart="7sp"/>
	</TableRow>

	<Button
	    android:id="@+id/btnGuardarGasto"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txtGuardar" />
	
</TableLayout>
