<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 	android:stretchColumns="1"
  	android:collapseColumns="2"
  	android:shrinkColumns="1"
    tools:context=".AddCategoriaActivity" >

 	<TableRow>
    	<TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"    	    
      		android:text="@string/txtCategoria"/>

    	<EditText
    	    android:id="@+id/editCategoria"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10" >
    	</EditText>

  	</TableRow>
  	
	<TableRow>
    	<TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"    	    
      		android:text="@string/txtTipo"/>
	    <Spinner
	        android:id="@+id/spnTipos"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/arrayTipos"/>
	</TableRow>

	<Button
	    android:id="@+id/btnGuardarCategoria"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txtGuardar" />
</TableLayout>
